[gd_scene load_steps=13 format=3 uid="uid://innsvprkd5v"]

[ext_resource type="Script" path="res://1_Scripts/amulets.gd" id="1_segl0"]
[ext_resource type="FontFile" uid="uid://da5k2m2fg3fk4" path="res://69_Fonts/YOZAKURA-Regular.otf" id="3_hew5u"]
[ext_resource type="Script" path="res://1_Scripts/amulets_int.gd" id="4_4rtw2"]
[ext_resource type="Texture2D" uid="uid://ccmpli3vv7745" path="res://2_Images/UI/HUD/omamori-japanese-amulets-vector1.png" id="4_om8gm"]
[ext_resource type="Texture2D" uid="uid://chd6qjbl03ks5" path="res://2_Images/UI/HUD/omamori-japanese-amulets-vector2.png" id="5_1opqt"]
[ext_resource type="Texture2D" uid="uid://c3nkck8vnwrlt" path="res://2_Images/UI/HUD/omamori-japanese-amulets-vector3.png" id="6_6q0ew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0in1j"]
size = Vector2(17, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkpky"]
size = Vector2(16.5, 30)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_11k2k"]
polygon = PackedVector2Array(-9, -9, 8, -9, 8, 20, -9, 20)

[sub_resource type="Animation" id="Animation_oftm6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeyPoly:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fdtgg"]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeyPoly:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbf4r"]
_data = {
"RESET": SubResource("Animation_oftm6"),
"door_open": SubResource("Animation_fdtgg")
}

[node name="Amulets" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_segl0")

[node name="KeyPoly" type="Polygon2D" parent="."]
position = Vector2(1.00009, -1)
scale = Vector2(1.01843, 1)
texture = ExtResource("4_om8gm")
texture_scale = Vector2(50, 50)
polygon = PackedVector2Array(0, 33, 28.475, 33, 31, 34, 56.9502, 33, 56.9502, 18, 56.9502, 0, -0.00484371, 0.00997257)
uv = PackedVector2Array(0.031497, 64.0319, 63.9543, 64.0104, 63.982, 0.0110836, -0.00484371, 0.00997257)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.5, 14)
shape = SubResource("RectangleShape2D_0in1j")

[node name="AreaOfInteraction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInteraction"]
position = Vector2(8.75, 15)
shape = SubResource("RectangleShape2D_rkpky")
debug_color = Color(0, 0.647059, 0.176471, 0.0705882)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(9, 9)
occluder = SubResource("OccluderPolygon2D_11k2k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbf4r")
}

[node name="Interact" type="CanvasLayer" parent="."]
visible = false

[node name="InteractText" type="Label" parent="Interact"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -40.0
offset_right = 168.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.638884, 2.02149e-06, 4.81307e-07, 1)
theme_override_fonts/font = ExtResource("3_hew5u")
theme_override_font_sizes/font_size = 33
text = "[E] TO INTERACT"

[node name="Amulets" type="CanvasLayer" parent="."]
script = ExtResource("4_4rtw2")

[node name="Amulets_box" type="HBoxContainer" parent="Amulets"]
clip_contents = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -278.0
offset_top = -216.0
offset_right = 54.0
offset_bottom = -92.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.799995, 1.64)
theme_override_constants/separation = -20

[node name="Amulet1" type="TextureRect" parent="Amulets/Amulets_box"]
visible = false
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 2
texture = ExtResource("4_om8gm")
expand_mode = 2

[node name="Amulet2" type="TextureRect" parent="Amulets/Amulets_box"]
visible = false
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 2
texture = ExtResource("5_1opqt")
expand_mode = 2

[node name="Amulet3" type="TextureRect" parent="Amulets/Amulets_box"]
visible = false
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 2
texture = ExtResource("6_6q0ew")
expand_mode = 2

[connection signal="area_entered" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_entered"]
[connection signal="area_exited" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_exited"]
